<resources>
    <string name="app_name">Agenda</string>
    <string name="select_telephone_type">Select Telephone Type</string>
    <string name="house">House</string>
    <string name="cell_phone">Cell Phone</string>
    <string name="work">Work</string>
    <string name="preference_file_key">br.com.jef.sharedpreferences.PREFERENCE_FILE_KEY</string>
    <string name="light_mode">Light Mode</string>
    <string name="name">Name</string>
    <string name="telephone">Telephone</string>
    <string name="birth_date">Birth Date</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="other">Other</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="empty_field">Empty Field</string>
    <string name="cell_phone_type">Cell Phone</string>
</resources>